--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,11 @@
     "build": "vite build && tsc",
     "serve": "vite preview",
     "test": "vitest run",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "test:cypress": "node scripts/e2e-setup.js",
+    "test:e2e:direct": "cypress run --spec 'cypress/e2e/auth/**/*.cy.ts'",
+    "test:all": "bun test && bun run test:cypress",
     "format": "biome format",
     "lint": "biome lint",
     "check": "biome check"
@@ -43,9 +48,11 @@
     "@biomejs/biome": "1.9.4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
+    "@types/node": "^24.2.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "cypress": "^14.5.4",
     "jsdom": "^26.0.0",
     "typescript": "^5.7.2",
     "vite": "^6.3.5",
