--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,16 +34,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+    - name: Setup Bun
+      uses: oven-sh/setup-bun@v1
       with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-        cache-dependency-path: backend/package-lock.json
+        bun-version: latest
 
     - name: Install backend dependencies
       working-directory: ./backend
-      run: npm ci
+      run: bun install --frozen-lockfile
 
     - name: Setup environment variables
       working-directory: ./backend
@@ -55,27 +53,27 @@ jobs:
 
     - name: Generate Prisma client
       working-directory: ./backend
-      run: npx prisma generate
+      run: bunx prisma generate
 
     - name: Run database migrations
       working-directory: ./backend
-      run: npx prisma migrate deploy
+      run: bunx prisma migrate deploy
       env:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
 
     - name: Seed database
       working-directory: ./backend
-      run: npx prisma db seed
+      run: bunx prisma db seed
       env:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
 
     - name: Run linting
       working-directory: ./backend
-      run: npm run lint
+      run: bun run lint
 
     - name: Run unit tests
       working-directory: ./backend
-      run: npm test
+      run: bun test
       env:
         NODE_ENV: test
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
@@ -84,7 +82,7 @@ jobs:
 
     - name: Run tests with coverage
       working-directory: ./backend
-      run: npm run test:cov
+      run: bun run test:cov
       env:
         NODE_ENV: test
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
@@ -93,7 +91,7 @@ jobs:
 
     - name: Run E2E tests
       working-directory: ./backend
-      run: npm run test:e2e
+      run: bun run test:e2e
       env:
         NODE_ENV: test
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
@@ -125,7 +123,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
 
     - name: Install frontend dependencies
       working-directory: ./frontend
@@ -161,7 +158,7 @@ jobs:
 
     - name: Check for security vulnerabilities
       working-directory: ./backend
-      run: npm audit --audit-level moderate
+      run: bun audit
 
     - name: Check frontend security
       working-directory: ./frontend
